--- a/src/scss/grommet-core/_objects.box.scss
+++ b/src/scss/grommet-core/_objects.box.scss
@@ -189,7 +189,7 @@
 
 .#{$grommet-namespace}box--flex {
   flex: 1 1;
-  //need to fix flexbox issue with min-width: auto for some tags
+  // need to fix flexbox issue with min-width: auto for some tags
   min-width: 0;
 }
 
@@ -199,7 +199,12 @@
 
 .#{$grommet-namespace}box--flex-grow {
   flex: 1 0;
-  //need to fix flexbox issue with min-width: auto for some tags
+
+  &:not([class^=".#{$grommet-namespace}box--basis"]) {
+    flex-basis: auto;
+  }
+
+  // need to fix flexbox issue with min-width: auto for some tags
   min-width: 0;
 }
 
